--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     ================================= */
     .hero {
       height: 100vh;
-      background: url(https://i.ytimg.com/vi/-wW9Jd4lQmo/mqdefault.jpg) no-repeat center center/cover;
+      background: url(https://elperuano.pe/suplementosflipping/lonuestro/284/web/img/foto01_2.jpg) no-repeat center center/cover;
       display: flex;
       flex-direction: column;
       justify-content: flex-end;
@@ -161,5 +161,6 @@
 
 </body>
 </html>
+
 
 
